--- a/1/templates/carts-dep.yaml
+++ b/1/templates/carts-dep.yaml
@@ -35,6 +35,8 @@ spec:
           runAsNonRoot: true
           runAsUser: 10001
           capabilities:
+            drop:
+              - all
             add:
               - NET_BIND_SERVICE
           readOnlyRootFilesystem: true
