--- a/sock-shap/0/Chart.yaml
+++ b/sock-shap/0/Chart.yaml
@@ -3,6 +3,6 @@ description: A Rancher 2.0 App store for Sock Shop
 name: sockshop
 version: 0.1.0
 description: Rancher && Michelin POC
-icon: http://ohx02qrb8.bkt.clouddn.com/micheling.png
+icon:  ../logo.jpg 
 
 
